--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"browser-sync": "^2.26.7"
+		"browser-sync": "^2.26.7",
+		"tailwindcss": "^3.0.18"
 	}
 }
